kubernetes/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starcar-backend-service
  namespace: starcar
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: starcar-frontend-service
  namespace: starcar
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
