kubernetes/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: starcar-ingress
  namespace: starcar
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb 
  rules:
  - host: "api.star-car.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: starcar-backend-service
            port:
              number: 5001
  - host: "www.star-car.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: starcar-frontend-service
            port:
              number: 80
  - host: "star-car.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: starcar-frontend-service
            port:
              number: 80
